  * Always use /bin/sh as the shell on Debian systems, because Debian
    guarantees, that /bin/sh is a posix shell (Closes: #75475).
  * Move /usr/share/doc/lbdb/override.Lintian to
    /usr/share/lintian/overrides/lbdb.
  * Add $(install_prefix) to Makefile.in and change debian/rules to use
    it.  Thanks to Rob Payne <rnspayne@adelphia.net> for providing the
    idea and a patch.

 --

lbdb (0.22) unstable; urgency=low

  * Add new module m_addr_email to request data from addressbook program
    (http://red.roses.de/~clemens/addressbook/) by Torsten Jerzembeck
    <toje@nightingale.ms.sub.org>.
  * Some optimizations on m_addr_email to handle city name correct and to
    junk entries without email address.
  * Update lbdb.el to version 1.8:
    - Fixes the problem with spaces in query strings (Closes: #74818).
    - New commands lbdb-region and lbdb-maybe-region to query lbdb for the
      content of the current region.
    - Autoload lbdb-region and lbdb-maybe-region from startup file.
  * Use sort without -u option, because duplicates are already removed by
    munge before.
  * Do not overwrite m_inmail.list on munging, if file system is full.

 -- Roland Rosenfeld <roland@debian.org>  Tue, 17 Oct 2000 17:59:07 +0200

lbdb (0.21.1) unstable; urgency=low

  * Update lbdb.el to version 1.4 to avoid problems with status line of
    lbdbq.
  * Correct behavior of variable SORT_OUTPUT (did the inverse of what it
    should do).
  * Correct output of number of matching entries (count after munging
    instead before).
  * SORT_OUTPUT now can be "name" or "address" to sort output by mail
     real names or addresses (still the default).

 -- Roland Rosenfeld <roland@debian.org>  Mon,  9 Oct 2000 12:05:28 +0200

lbdb (0.21) unstable; urgency=low

  * Don't fail in m_palm, if no database is available.
  * Update lbdb.el to version 1.3 (thanks Dave).
  * m_muttalias: Add support for "alias foo <foo@bar> (Foo Bar)" style
    aliases.