@@ -1,5 +1,5 @@
 %define ver      @LBDB_VERSION@
-%define rel      1
+%define rel      2
 %define prefix   /usr
 
 Summary: The Little Brother's Database
@@ -12,8 +12,8 @@ Packager: Horms <horms@vergenet.net>
 Vendor: Horms
 Group: Applications/Databases
 Source: http://www.spinnaker.de/debian/lbdb_%{ver}.tar.gz
+NoSource: 0
 BuildRoot: /var/tmp/lbdb-%{PACKAGE_VERSION}-root
-Patch: lbdb-0.18.5.makefile.patch
 Docdir: %{prefix}/doc
 
 %description
@@ -27,11 +27,10 @@ although it should be quite easy to extend it to use, e.g., an installed
 PostgreSQL server as it's back end.
 
 %prep
-%setup -n lbdb-%{ver}
-%patch -p1
+%setup -q
 
 %build
-%configure
+%configure 2>&1 | tee -a Configurings-`date +%Y.%m.%d`
 
 #Funky NPROC code to speed things up courtesy of Red Hat's kernel rpm
 if [ -x /usr/bin/getconf ] ; then
@@ -44,45 +43,37 @@ else
 fi
 NRPROC=`expr $NRPROC + $NRPROC`
 
-make -j $NRPROC
+make -j $NRPROC  2>&1 | tee -a Makings-`date +%Y.%m.%d`
 
 %install
 rm -rf $RPM_BUILD_ROOT
 mkdir -p ${RPM_BUILD_ROOT}/%{prefix}/etc
-BUILD_ROOT=${RPM_BUILD_ROOT} make install
 
-#File finding code thanks to Samuel Flory of VA Linux Systems
-cd ${RPM_BUILD_ROOT}
-# Directories
-find . -type d | fgrep -v /doc/ | \
-  sed '1,2d;s,^\.,\%attr(-\,root\,root) \%dir ,' \
-  > ${RPM_BUILD_DIR}/lbdb-%{ver}-%{rel}.files
-# Files
-find . -type f | fgrep -v /doc/ | \
-  sed 's,^\.,\%attr(-\,root\,root) ,' \
-  >> ${RPM_BUILD_DIR}/lbdb-%{ver}-%{rel}.files
-# Symbolic links
-find . -type l | fgrep -v /doc/ | \
-  sed 's,^\.,\%attr(-\,root\,root) ,' \
-  >> ${RPM_BUILD_DIR}/lbdb-%{ver}-%{rel}.files
-
-
+make install_prefix=${RPM_BUILD_ROOT} install 2>&1 \
+    | tee -a Makings-Install-`date +%Y.%m.%d`
 
 %clean
 rm -rf ${RPM_BUILD_DIR}/lbdb-%{ver}
 rm -rf ${RPM_BUILD_ROOT}
-rm ${RPM_BUILD_DIR}/lbdb-%{ver}-%{rel}.files
 
-%post
-
-%postun
-
-%preun
-
-%files -f ../lbdb-%{ver}-%{rel}.files
+%files
+%defattr(-,root,root)
 %doc README COPYING
-
+# Keep copies of the configure, build, install reports in the
+# documentation of the package.
+%doc Makings-Install-`date +%Y.%m.%d`
+%doc Makings-`date +%Y.%m.%d`
+%doc Configurings-`date +%Y.%m.%d`
+%{prefix}
 
 %changelog
+* Sat Dec 30 2000 Rob Payne <rnspayne@adelphia.net>
+- Changed to fit version 0.22
+- Change installation process to include RPM_BUILD_ROOT
+- Removed auto-generated files list that did not take into account RPM
+  4's automatic compression of the man pages *after* the
+  auto-generation was running.
+- Removed the empty post, postun, preun scripts.
+
 * Mon Apr 10 2000 Horms <horms@vergenet.net>
 - created for version 0.18.5
